--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -5,3 +5,24 @@ page-home {
 	margin-top: 30px;
 	text-align : center	
 }
+.demo > div{
+margin-top: 52px !important;
+overflow : visible !important;
+// padding-top: 70px !important; 
+z-index: 10 ;
+
+}
+.icon-button{
+	position: absolute;
+	top: -45px;
+	color :#4B4B4B;
+	background:#F8F8F8;
+	cursor: pointer;
+	height: 40px;
+	width: 40px;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	font-size: 20px;
+	
+}
