--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -42,6 +42,10 @@ $colors: (
 );
 
 
+// change the header background
+$toolbar-background: #38ACB9;
+
+
 // App iOS Variables
 // --------------------------------------------------
 // iOS only Sass variables can go here
