--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -15,8 +15,8 @@ z-index: 10 ;
 .icon-button{
 	position: absolute;
 	top: -45px;
-	color :#4B4B4B;
-	background:#F8F8F8;
+	color :white;
+	background:#38ACB9;
 	cursor: pointer;
 	height: 40px;
 	width: 40px;
