--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,6 +1,14 @@
 page-home {
 
 }
+.menu-button{
+	display : inline !important
+}
+.logout-button{
+	background : #0097A7;
+	color : white;
+	font-size : 18px
+}
 .div-button{
 	margin-top: 30px;
 	text-align : center	
@@ -8,7 +16,6 @@ page-home {
 .demo > div{
 margin-top: 52px !important;
 overflow : visible !important;
-// padding-top: 70px !important; 
 z-index: 10 ;
 
 }
@@ -25,4 +32,16 @@ z-index: 10 ;
 	justify-content: center;
 	font-size: 20px;
 	
+}
+.div_h2{
+	text-align : center
+}
+.h2{
+	color :#96C1DD;
+}
+.patient-form{
+	margin-top: 50px;
+}
+.submit-button{
+	background: #00838F
 }
